# even-matrix

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  app.json  config.example.toml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
.github/workflows/: release.yml
plugin/: app.json  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
plugin/src/: App.svelte  index.ts  matrix-client.ts  plugin.test.ts  plugin.ts
plugin/src/__mocks__/: bridge.js  bridge.ts  matrix-client.ts  websocket.js  websocket.ts
src/: App.svelte  MessageList.svelte  SettingsPanel.svelte  api.rs  config.rs  intent.rs  main.rs  matrix-client.test.ts  matrix-client.ts  matrix-sdk-client.ts  matrix.rs  message-utils.test.ts  message-utils.ts  plugin.test.ts  plugin.ts  session.rs  storage-keys.ts  transcribe.rs  wasm-probe.ts
src/__mocks__/: bridge.ts  matrix-client.ts
