[package]
name = "g2-matrix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "g2-matrix"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
matrix-sdk = { version = "0.10", features = ["sqlite"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
